<resources>
    <string name="app_name">FisiApp</string>
    <string name="title_home">Home</string>
    <string name="title_exams">Exams</string>
    <string name="title_videos">Videos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_title">About</string>
    <string name="comentarios_title">Comments</string>
    <string name="what_is_new_title">What\'s new</string>
    <string name="practico_title">Practical</string>
    <string name="formulas_title">Formulas</string>
    <string name="data_title">Data</string>
    <string name="proceso_title">Process</string>
    <string name="item1_vectores_examples">Vector A 5km to 120°</string>
    <string name="item2_vectores_examples">Vector B 7km to 43°</string>
    <string name="item3_vectores_examples">Vector C 8km to 150°</string>
    <string name="formula_cxcos_vectores">Cx = Vcosθ</string>
    <string name="formula_cysen_vectores">Cy = Vsenθ</string>
    <string name="pitagoras">C² = √a²+b²</string>
    <string name="proceso1_vectores_example1">Cx = 5kmcos120° = 2.5km  Cx 7kmCos43° = 5.1km  Cx = 8kmCos150° = -6.9km</string>
    <string name="proceso2_vectores_example1">Cy = 5kmsen120° = 4.3km   Cy = 7kmSen43° = 4.7km   Cy = 8kmSen150° = 4km</string>
    <string name="respuesta_parte1_example1_vectores">R=√18.49 + 169</string>
    <string name="respuesta_parte2_example1_vectores">R = √187.49</string>
    <string name="respuesta_parte3_example1_vectores">R = 13.69</string>
    <string name="ejemplo2_conversiones">5m/s to km/h</string>
    <string name="item1_conversiones_ejemplo2">1km = 1000m</string>
    <string name="item2_conversiones_ejemplo2">1hr = 3600s</string>
    <string name="respuesta_conversiones_ejemplo2_parte1">5m/s * 1km/1000m * 3600s/1hr = 18000km/1000h</string>
    <string name="respuesta_conversiones_ejemplo2_parte2">18000km÷1000h = 18km/h</string>
    <string name="title_magnitudes_fundamentales">Fundamental magnitudes</string>
    <string name="parrafo3_magnitudes">The fundamental units are defined independently and, often, the quantities are directly measurable in a physical system. They do not depend on any other physical magnitude. \n\n ~There are a total of seven fundamental magnitudes</string>
    <string name="masa_title">Mass</string>
    <string name="parrafo4_magnitudes">kilogram (kg) It is defined by the mass of a platinum-iridium cylinder prototype maintained at the International Bureau of Weights and Measures in Paris, France.</string>
    <string name="longitud_title">Length</string>
    <string name="parrafo5_magnitudes">meter (m) It is defined as the length of the path traveled by light in a range of exactly 1/299792458 seconds.</string>
    <string name="tiempo_title">Time</string>
    <string name="parrafo6_magnitudes">Second (s) According to the International System of Units, it is the time of 192,631,770 periods of oscillations of the light emitted by a cesium -133 atoms corresponds to the transition between two hyperfine levels of the ground state.</string>
    <string name="conrriente_electrica_title">Electric current</string>
    <string name="parrafo7_magnitudes">Ampere (A) Measure the intensity of electric current. It is defined by the constant current that if it flows in two parallel straight conductors of infinite length and negligible section circulates, when it is 1 meter away in the vacuum, it produces a force equal to 2 × 10 − 7 Newton per meter of length between these drivers.</string>
    <string name="temperatura_title">Temperature</string>
    <string name="parrafo8_magnitudes">kelvin (K) According to the International System of Units, the kelvin is exactly 1 / 273.16 of the thermodynamic temperature of the triple point of water.</string>
    <string name="intensidad_luminosa_title">Luminous intensity</string>
    <string name="parrafo9_magnitudes">candela (cd) It measures the light intensity of a source that emits a radiation of a constant frequency of 540 × 1012 Hz with a radiant intensity of 1/683 watts per stereo in any given direction.</string>
    <string name="mol_title">mol</string>
    <string name="parrafo10_magnitudes">(mol) The mole is the amount of substance that contains as many entities as atoms in 0.012 kg of carbon-12.</string>
    <string name="title_magnitudes_derivadas">Derived quantities</string>
    <string name="parrafo11_magnitudes">The derived quantities are formed by the product of the powers of the fundamental units, these units are not defined independently, since they depend on the definition of other units. Except for the 7 fundamental magnitudes named above, all other magnitudes are derived. Some examples of derived quantities are:</string>
    <string name="unidad_de_trabajo_title">Unit of work</string>
    <string name="parrafo12_magnitudes">Joule or July (J) It is the work done when the point of application of the force of a newton (1 N) moves at a distance of one meter (1 m) in the direction of force.</string>
    <string name="fuerza_title">Force</string>
    <string name="parrafo13_magnitudes">Newton (N) It is that force that, when applied to a body with a mass of one kilogram (1 kg), gives an acceleration of one meter per second squared (1 mx s2).</string>
    <string name="presion_title">Pressure</string>
    <string name="parrafo14_magnitudes">pascal (Pa) It is the pressure that results when a force of a newton (1 N) is applied uniformly and perpendicularly to a surface of one square meter (1 m2).</string>
    <string name="potencial_eletrico_title">Electrical potential</string>
    <string name="parrafo15_magnitudes">volt (V) It is the potential difference between two points of a conduction cable that carries a constant current of one ampere (1 A), when the power dissipated between these points is one Watt (1 W).</string>
    <string name="examples1_title">Example number 1</string>
    <string name="problema1_primera_ley_indicacion1">Convert weight to mass</string>
    <string name="problema1_segunda_ley_datos">a = 0.5m/s² \n p = 50N \n T = ?</string>
    <string name="problema_seguda_ley_formula">T = p − ma</string>
    <string name="problema1_segunda_ley_resolucion1">\nm = 50N ÷ 9.8m/s² = 5.1kg</string>
    <string name="problema1_segunda_ley_indicacion">\nWith the mass obtained, the values in the formula are changed T = p − ma</string>
    <string name="problema1_segunda_ley_resolucion2">\nT = 50N − (5.1kg) (0.5m²)</string>
    <string name="proble1_segunda_ley_resolucion_final">\n T = 50N − 2.55 = 47.45N → T = 47.45N</string>
    <string name="problema1_tercera_ley">Two boxes of 20 and 30 kg of masses, respectively, are supported on a horizontal surface without friction, one resting on the other. If we push the set with a force of 100N. What is the acceleration of each other? What force will each box exercise over the other?</string>
    <string name="formula1_tercera_ley">f = (m1 + m2) × a</string>
    <string name="resolucion1_tercera_ley">\nOn the box 1 act the forces F and F21 in the horizontal direction and on the box 2, the F12 in the same direction. In module F21 = F12</string>
    <string name="resolucion2_tercera_ley">\nApplying Newton\'s 2nd law F = m * a; to each box:</string>
    <string name="resolucion3_tercera_ley">\nbox1: F-F21 = m1 * to box2: F12 = m2 * a Addition: F = (m1 + m2) * a; 100 = (20 + 30) * a; a = 2m / s²</string>
    <string name="resolucion4_tercera_ley">\nAnd substituting in f12 = m2 * a = 20 * 2 = 40N, force exerted by box 1 over 2. The force exerted by box 2 over 1 is equal in module, direction and opposite direction</string>
    <string name="pregunta_uno_conversiones_teorico">Convert 1 mile to meters</string>
    <string name="respuesta1_pregunta1_examteorico_conversiones">16 meters</string>
    <string name="respuesta2_pregunta1_examteorico_conversiones">500 meters</string>
    <string name="respuesta3_pregunta1_examteorico_conversiones">1609 meters</string>
    <string name="respuesta4_pregunta1_examteorico_conversiones">1000 meters</string>
    <string name="pregunta_dos_conversiones_teorico">Convert 12.3 miles to meters</string>
    <string name="respuesta1_pregunta2_examteorico_conversiones">1609 meters</string>
    <string name="respuesta2_pregunta2_examteorico_conversiones">19794 meters</string>
    <string name="respuesta3_pregunta2_examteorico_conversiones">12000 meters</string>
    <string name="respuesta4_pregunta2_examteorico_conversiones">12500 meters</string>
    <string name="pregunta_tres_conversiones_teorico">Convert 45 miles to kilometers</string>
    <string name="respuesta1_pregunta3_examteorico_conversiones">75,900 kilometers</string>
    <string name="respuesta2_pregunta3_examteorico_conversiones">72,420 kilometers</string>
    <string name="respuesta3_pregunta3_examteorico_conversiones">70,858 kilometers</string>
    <string name="respuesta4_pregunta3_examteorico_conversiones">78.9 kilometers</string>
    <string name="pregunta_cuatro_conversiones_teorico">Convert 1 meter to yards</string>
    <string name="respuesta1_pregunta4_examteorico_conversiones">.9 yards</string>
    <string name="respuesta2_pregunta4_examteorico_conversiones">1 Yard</string>
    <string name="respuesta3_pregunta4_examteorico_conversiones">1,093 yards</string>
    <string name="respuesta4_pregunta4_examteorico_conversiones">2.54 yards</string>
    <string name="pregunta_cinco_conversiones_teorico">Convert 100 meters to yards</string>
    <string name="respuesta1_pregunta5_examteorico_conversiones">109.3 yards</string>
    <string name="respuesta2_pregunta5_examteorico_conversiones">100.3 yards</string>
    <string name="respuesta3_pregunta5_examteorico_conversiones">1.3 yards</string>
    <string name="respuesta4_pregunta5_examteorico_conversiones">900.3 yards</string>
    <string name="pregunta_seis_conversiones_teorico">Convert 3 meters to feet</string>
    <string name="respuesta1_pregunta6_examteorico_conversiones">7,598 feet</string>
    <string name="respuesta2_pregunta6_examteorico_conversiones">9,842 feet</string>
    <string name="respuesta3_pregunta6_examteorico_conversiones">6,895 feet</string>
    <string name="respuesta4_pregunta6_examteorico_conversiones">800 feet</string>
    <string name="pregunta_siete_conversiones_teorico">Convert 6 feet to meters</string>
    <string name="respuesta1_pregunta7_examteorico_conversiones">1,828 meters</string>
    <string name="respuesta2_pregunta7_examteorico_conversiones">2,567 meters</string>
    <string name="respuesta3_pregunta7_examteorico_conversiones">2 meters</string>
    <string name="respuesta4_pregunta7_examteorico_conversiones">1.5 meters</string>
    <string name="pregunta_ocho_conversiones_teorico">Convert 2.5 feet to inches</string>
    <string name="respuesta1_pregunta8_examteorico_conversiones">30 inches</string>
    <string name="respuesta2_pregunta8_examteorico_conversiones">28 inches</string>
    <string name="respuesta3_pregunta8_examteorico_conversiones">25 inches</string>
    <string name="respuesta4_pregunta8_examteorico_conversiones">27.5 inches</string>
    <string name="pregunta_nueve_conversiones_teorico">Convert 1 gallon to liters</string>
    <string name="respuesta1_pregunta9_examteorico_conversiones">3.5 liters</string>
    <string name="respuesta2_pregunta9_examteorico_conversiones">4,356 liters</string>
    <string name="respuesta3_pregunta9_examteorico_conversiones">4 liters</string>
    <string name="respuesta4_pregunta9_examteorico_conversiones">3.785 liters</string>
    <string name="pregunta_diez_conversiones_teorico">Convert 4 gallons to liters</string>
    <string name="respuesta1_pregunta10_examteorico_conversiones">16,956 liters</string>
    <string name="respuesta2_pregunta10_examteorico_conversiones">14 liters</string>
    <string name="respuesta3_pregunta10_examteorico_conversiones">15,139 liters</string>
    <string name="respuesta4_pregunta10_examteorico_conversiones">16 liters</string>
</resources>