<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutPrincipal">
    <LinearLayout
        style="@style/layoutInterno">

        <!--TODO: Aqui esta la primera parte-->
        <TextView
            style="@style/titleTextView"
            android:text="@string/examples1_title"/>

        <View
            style="@style/separador"/>


        <TextView
            style="@style/titleExamTextView"
            android:text="@string/data_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_segunda_ley_datos"/>


        <TextView
            style="@style/titleExamTextView"
            android:text="@string/formulas_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema_seguda_ley_formula"/>

        <TextView
            style="@style/titleExamTextView"
            android:text="@string/proceso_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_primera_ley_indicacion1"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_segunda_ley_resolucion1"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_segunda_ley_indicacion"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_segunda_ley_resolucion2"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/proble1_segunda_ley_resolucion_final"/>
    </LinearLayout>
</android.support.v7.widget.CardView>