<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutPrincipal">
    <LinearLayout
        style="@style/layoutInterno">

        <!--TODO: Aqui esta la primera parte-->
        <TextView
            style="@style/titleTextView"
            android:text="@string/title_magnitudes_derivadas"/>

        <View
            style="@style/separador"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/parrafo11_magnitudes"/>

        <TextView
            style="@style/subtitleTextview"
            android:text="@string/unidad_de_trabajo_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/parrafo12_magnitudes"/>

        <!--Segunda magnitud-->
        <TextView
            style="@style/subtitleTextview"
            android:text="@string/fuerza_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/parrafo13_magnitudes"/>

        <!--Tercera magnitud-->
        <TextView
            style="@style/subtitleTextview"
            android:text="@string/presion_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/parrafo14_magnitudes"/>
        <!--Cuarta magnidud-->
        <TextView
            style="@style/subtitleTextview"
            android:text="@string/potencial_eletrico_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/parrafo15_magnitudes"/>
    </LinearLayout>
</android.support.v7.widget.CardView>