<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutPrincipal">
    <LinearLayout
        style="@style/layoutInterno">

        <!--TODO: Aqui esta la primera parte-->
        <TextView
            style="@style/titleTextView"
            android:text="@string/examples1_title"/>

        <View
            style="@style/separador"/>

        <FrameLayout
            style="@style/frameLayoutImageContainer">
            <ImageView
                style="@style/imageViewInformation"
                android:src="@drawable/ejemtres"/>
        </FrameLayout>

        <TextView
            style="@style/titleExamTextView"
            android:text="@string/data_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/problema1_tercera_ley"/>


        <TextView
            style="@style/titleExamTextView"
            android:text="@string/formulas_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/formula1_tercera_ley"/>

        <TextView
            style="@style/titleExamTextView"
            android:text="@string/proceso_title"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/resolucion1_tercera_ley"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/resolucion2_tercera_ley"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/resolucion3_tercera_ley"/>

        <TextView
            style="@style/parafoTextview"
            android:text="@string/resolucion4_tercera_ley"/>
    </LinearLayout>
</android.support.v7.widget.CardView>